<resources>
    <string name="app_name">FinanceApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="reEnterPassword">Repeat\npassword: </string>
    <string name="logInBtnText">Sign in </string>
    <string name="notAMemberText">Not a member? Click here! </string>
    <string name="registerBtnText">Register! </string>
    <string name="registerFirstName">FirstName: </string>
    <string name="registerLastName">LastName: </string>
    <string name="welcome_user">Welcome user!</string>
    <string name="log_out_btnString">Log out</string>
    <string name="current_balance">Current balance: 100kr</string>
    <string name="toggle_income_expenses">Toggle Income/expens</string>
    <string name="search">Search</string>
    <string name="add_transaction">Add transaction</string>
    <string name="date">Date:</string>
    <string name="title">Title:</string>
    <string name="category">Category:</string>
    <string name="amount">Amount:</string>
    <string name="commitBtnText">Commit</string>
    <string name="income1">Salary</string>
    <string name="income2">Other</string>
    <string name="expense1">Groceries</string>
    <string name="expense2">Entertainment</string>
    <string name="expense3">Travel</string>
    <string name="expense4">Food</string>
    <string name="expense5">Other</string>
    <string name="search_from">Search from:</string>
    <string name="search_to">Search to:</string>
    <string name="product_scan">Scan product</string>
    <string name="clear_search_criteria">Clear search criteria</string>
</resources>
